Replace mysql by mariaDb and improve readme.md

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 #Docker env parameters
 
-### mysql param ##
-MYSQL_ROOT_PASSWORD=db_user_root_pass
+###> mariadb param ##
+MYSQL_ROOT_PASSWORD=LjXImATucAdVABJ
 MYSQL_USER=db_user
-MYSQL_PASSWORD=db_user_pass
+MYSQL_PASSWORD=50kCnWg9XNi8T9W
 MYSQL_DATABASE=app_db
 #MYSQL_RANDOM_ROOT_PASSWORD="yes"
-### mysql param ##
+###< mysql param ##
 
 ###> Redis  ##
-REDIS_PASSWORD=mypassword
-###> Redis ##
+REDIS_PASSWORD=Az9jhA3RVYOtQaf
+###< Redis ##
