--- a/compose.yaml
+++ b/compose.yaml
@@ -1,22 +1,22 @@
 version:  '3.8'
 services:
   mysql:
-    image: mysql:8.2
-    container_name: mysql-db
+    image: mariadb:11.2
+    container_name: mariadb
     restart: on-failure
     env_file:
       - .env
     volumes:
       - dbdata:/var/lib/mysql
     ports:
-      - 3306:3306
+      - '3306:3306'
 
   adminer:
     image: adminer
     container_name: adminer-app
     restart: on-failure
     ports:
-      - '3001:8080'
+      - '8080:8080'
 
   php:
     build:
@@ -30,7 +30,7 @@ services:
     restart: on-failure
     env_file:
       - .env
-    user: 1000:1000
+    user: '1000:1000'
     depends_on:
       - redis
 
@@ -42,8 +42,8 @@ services:
       - './app/public:/var/www/app/public'
       - './docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro'
     ports:
-      - '3000:80'
-      - '444:443'
+      - '80:80'
+      - '443:443'
     depends_on:
       - php
 
@@ -53,7 +53,7 @@ services:
   redis:
     image: redis:7.2-alpine
     container_name: redis-cache
-    restart: always
+    restart: on-failure
     ports:
       - '6379:6379'
     volumes:
