--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,10 +2,7 @@
 
 FROM composer:2.6.6 as composer
 
-##################################
-
 FROM php:8.3-fpm-alpine3.19
-
 RUN apk add --no-cache \
     bash=~5.2 \
     git=~2.43 \
@@ -24,18 +21,13 @@ RUN mkdir -p /var/www/app \
     && docker-php-ext-enable redis \
     && apk del .build-deps
 
-WORKDIR /var/www/app
-
-COPY app/composer.json /var/www/app/composer.json
-COPY app/composer.lock /var/www/app/composer.lock
+WORKDIR /var/www/app/
+COPY app .
 
 RUN PATH=$PATH:/var/www/app/vendor/bin:bin
-
 COPY --from=composer /usr/bin/composer /usr/bin/composer
-
-RUN composer install --no-scripts
-
-COPY app /var/www/app
 
 RUN chown -R 1000:1000 /var/www/app
 USER 1000:1000
+
+CMD bash -c 'composer install --no-scripts --ignore-platform-reqs && php-fpm'
